Fix dark mode toggle position

--- a/src/assets/styles/setup/media-queries.css
+++ b/src/assets/styles/setup/media-queries.css
@@ -177,4 +177,8 @@
     padding-block: 2em;
     margin: 0;
   }
+
+  .toggle_label{
+    margin: 0;
+  }
 }
